package sfs.proc.console.msg;

option java_outer_classname = "ConsoleMessageProto";

message ConsoleMessage{

    enum ConsoleMessageType {
        RELOAD  =1;
        INFO    =2;
        QUIT    =3;
    }
    required ConsoleMessageType type    =1;
    optional string procPath            =2;
    optional string data                =3;

}
