package sfs.proc.msg;

option java_outer_classname = "ProcessMessageProto";

message ProcessMessage{
    optional string procname            =1;
    optional string path                =2;
    optional string subid               =3;
    optional string data                =4;
    optional string pubid               =5;
    
    enum ProcessMessageType {
        INSTALL =0;
        DATA    =1;
        DESTROY =2;
        PING    =3;
        START   =4;
        START_OK = 8;
        START_FAIL = 9;
        KEY     =5;
        INSTALL_OK = 6;
        INSTALL_FAILED = 7;
    }

    required ProcessMessageType type = 6;
    optional string key = 7;

}
